--- a/styles/farm animal/index.html
+++ b/styles/farm animal/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Animal Farm</title>
 </head>
 <body>
-    
+    <a href="/">Home</a>
+    <h1>Dog Detail Page</h1>
+    <h2 id="animal-name"></h2>
+    <script src="./animals.js" type="module"></script>
 </body>
 </html>
