--- a/farm animal/index.html
+++ b/farm animal/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <a href="/">Home</a>
-    <h1>Dog Detail Page</h1>
+    <h1>Animal Detail Page</h1>
     <h2 id="animal-name"></h2>
     <script src="./animals.js" type="module"></script>
 </body>
