--- a/farm-animal/index.html
+++ b/farm-animal/index.html
@@ -7,9 +7,12 @@
     <title>Animal Farm</title>
 </head>
 <body>
+<main>
     <a href="/">Home</a>
     <h1>Animal Detail Page</h1>
     <h2 id="animal-name"></h2>
-    <script src="./animals.js" type="module"></script>
+</main>
+    <script src="./farm-animal.js" type="module"></script>
 </body>
+
 </html>
