--- a/farm-animal/index.html
+++ b/farm-animal/index.html
@@ -10,7 +10,12 @@
 <main>
     <a href="/">Home</a>
     <h1>Animal Detail Page</h1>
-    <h2 id="animal-name"></h2>
+    <h2 id="animal-name">
+        <div>
+            <img src="./assets/">
+            <p>this is a pig and it says oink </p>
+        </div>
+    </h2>
 </main>
     <script src="./farm-animal.js" type="module"></script>
 </body>
